[project]
name = "AIT-DSN"
version = "3.1.0"
description = "APIs for connecting to ground stations via CCSDS interfaces"
readme = "README.rst"
authors = [
    { name = "David Mayo", email = "dcmayo@moreheadstate.edu" }
    # 'AMMOS Instrument Toolkit Development Team <ait-pmc@googlegroups.com>',
    # 'David Mayo <dcmayo@moreheadstate.edu>',
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "ait-core>=2.4.0",
    "bitstring>=4.3.1",
    "greenlet==1.1.3",
    "pyasn1>=0.6.1",
    "xmltodict>=0.14.2",
]

[tool.uv.sources]
ait-core = { git = "https://github.com/NASA-AMMOS/AIT-Core" }

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

# [tool.poetry]
# name         = 'ait-dsn'
# version      = '2.1.1'
# description  = "APIs for connecting to ground stations via CCSDS interfaces"
# license = 'MIT'
# readme = 'README.rst'
# homepage = 'https://github.com/msu-ssc/AIT-DSN'
# repository = 'https://github.com/msu-ssc/AIT-DSN'
# # documentation = 'https://ait-dsn.readthedocs.io/en/latest'
# authors       = [
#     'AMMOS Instrument Toolkit Development Team <ait-pmc@googlegroups.com>',
#     'David Mayo <dcmayo@moreheadstate.edu>',
# ]

# packages = [
#     {include = "ait"}
# ]

# [tool.poetry.dependencies]
# python           = '>= 3.7 < 3.11'
# greenlet         = '1.1.3'
# ait-core         = '>= 2.4.0'
# pyasn1           = '*'
# bitstring        = '*'
# xmltodict        = '*'

# [tool.poetry.dev-dependencies]
# black                     = '*'
# flake8                    = '*'
# pyproject-flake8          = '^0.0.1-alpha.2'
# flake8-bugbear            = '*'
# pep8-naming               = '*'
# mypy                      = '*'
# types-PyYAML              = '*'
# types-requests            = '*'
# types-setuptools          = '*'
# pydocstyle                = '*'
# coverage                  = '*'
# pytest                    = '*'
# pytest-cov                = '*'
# pytest-watch              = '*'
# pytest-xdist              = '*'
# nose                      = '*'
# mock                      = '*'
# pre-commit                = '*'
# sphinx                    = '>= 4.2'
# sphinx-rtd-theme          = '*'
# sphinxcontrib-httpdomain  = '*'
# tox                       = '>= 3.8 < 4.0'
# twine                     = '^3.4.2'

# [tool.poetry.scripts]
# build_sphinx           = 'poetry_cli.build_sphinx:main'
